# berean-standard-bible-interlinear-rust-ds

./: .gitignore  Cargo.toml  README.md  errors.md
src/: hebrew_parsing.rs  interlinear.rs  main.rs
src/greek/: mod.rs  word.rs
src/greek/components/: case.rs  comparison.rs  gender.rs  mod.rs  mood.rs  number.rs  part_of_speech.rs  person.rs  tense.rs  voice.rs
src/greek/parsings/: adjective.rs  adverb.rs  aramaic_word.rs  article.rs  conjunction.rs  demonstrative_pronoun.rs  hebrew_word.rs  interjection.rs  interrogative_indefinite_pronoun.rs  mod.rs  noun.rs  particle.rs  personal_possessive_pronoun.rs  preposition.rs  reciprocal_pronoun.rs  reflexive_pronoun.rs  relative_pronoun.rs  verb.rs
