[package]
name = "bsb_xlsx"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = "0.26.1"
itertools = "0.14.0"
once_cell = "1.21.0"
polars = "0.46.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
bible_reference_parser = { path = "/home/dgmastertemple/Development/rust/bible_mods/parse_segments" }
